fixed the top tickets coming soon as well as the spacing on the timeline in mobile version

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -56,7 +56,7 @@
 .timeline-title{
 	font-weight:100;
 	font-size: 20px;
-	margin-top:-45px;
+	margin-top:-10px;
 	letter-spacing: 5px
 }
 
